fix for asset paths pt.2

--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -10,18 +10,18 @@ const Projects = info.projects.map((project) => project);
 
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <MetaHead
-      title={"Projects"}
-      description={"All projects are available in this page."}
-      ogImageUrl={"/assets/images/profile.png"}
-    />
-  </head>
+   <head>
+      <MetaHead
+         title={"Projects"}
+         description={"All projects are available in this page."}
+         ogImageUrl={"/astro-portfolio/assets/images/profile.png"}
+      />
+   </head>
 
-  <body>
-    <Layout>
-      <h1 style="line-height: 1.2;">Projects</h1>
-      <ProjectsWrapper projects={Projects} />
-    </Layout>
-  </body>
+   <body>
+      <Layout>
+         <h1 style="line-height: 1.2;">Projects</h1>
+         <ProjectsWrapper projects={Projects} />
+      </Layout>
+   </body>
 </html>
