--- a/src/components/home/Hero.astro
+++ b/src/components/home/Hero.astro
@@ -5,9 +5,9 @@ const { name, about } = Astro.props as IHeroProps;
 ---
 
 <section>
-  <p class="dark:text-light mt-[117px]">Hey, I’m</p>
-  <h1>{name}</h1>
-  <p class="dark:text-light text-lg mb-16">
-    {about}
-  </p>
+   <p class="dark:text-light mt-[117px]">Hey, I’m</p>
+   <h1>{name}</h1>
+   <p class="dark:text-light text-lg mb-8 md:mb-16">
+      {about}
+   </p>
 </section>
