--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -31,7 +31,9 @@ const featureProjects = info.projects.reduce((accumulator, project) => {
          <Experience title={"EXPERIENCE"} details={info.experience} />
          <Experience title={"EDUCATION"} details={info.education} />
          <section>
-            <h2 class="w-[15rem] dark:text-light mt-16">FEATURE PROJECTS</h2>
+            <h2 class="w-[15rem] dark:text-light mt-8 md:mt-16">
+               FEATURE PROJECTS
+            </h2>
             <ProjectsWrapper projects={featureProjects} />
          </section>
       </Layout>
